[gd_scene load_steps=2 format=3 uid="uid://b4bwcs6j8hqgv"]

[ext_resource type="Script" path="res://scripts/gui_tag_select.gd" id="1_vd0xt"]

[node name="GUITagSelect" type="Control"]
top_level = true
custom_minimum_size = Vector2(900, 320)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vd0xt")

[node name="BackgroundDim" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.392157)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(900, 320)
layout_mode = 2
metadata/_edit_use_anchors_ = true

[node name="BackgroundColor" type="ColorRect" parent="CenterContainer/PanelContainer"]
layout_mode = 2
color = Color(0.176471, 0.227451, 0.301961, 1)

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TagTypeContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/TagTypeContainer"]
layout_mode = 2
text = "Tag Type"
horizontal_alignment = 1

[node name="TypeOptionButton" type="OptionButton" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/TagTypeContainer"]
layout_mode = 2

[node name="TypeInfo" type="TextEdit" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/TagTypeContainer"]
layout_mode = 2
size_flags_vertical = 3
editable = false
wrap_mode = 1

[node name="CategoryContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/CategoryContainer"]
layout_mode = 2
text = "Category"
horizontal_alignment = 1

[node name="CategoryOptionButton" type="OptionButton" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/CategoryContainer"]
layout_mode = 2

[node name="CategoryInfo" type="TextEdit" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/CategoryContainer"]
layout_mode = 2
size_flags_vertical = 3
editable = false
wrap_mode = 1

[node name="TagsContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/TagsContainer"]
layout_mode = 2
text = "Tag"
horizontal_alignment = 1

[node name="TagsOptionButton" type="OptionButton" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/TagsContainer"]
layout_mode = 2

[node name="TagInfo" type="TextEdit" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/TagsContainer"]
layout_mode = 2
size_flags_vertical = 3
editable = false
wrap_mode = 1

[node name="ButtonContainer" type="HBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CancelButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
text = "Close"

[node name="AddButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
text = "Add"
